Time: 22 ms (36.30%) | Memory: 63.3 MB (97.11%) - LeetSync